social overflow fix

--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -79,6 +79,10 @@
 }
 
 .footer__social {
+  @media (min-width: $tablet-width) {
+    max-width: 340px;
+  }
+
   @media (min-width: $desktop-width) {
     margin-top: 50px;
   }
